Fix buttons not working on mobile + other fixes
Fix: builder buttons not working on mobile by adding touch events.
Fix: missing count functions from clear grid and column input events.
Improve comments.
CSS remove body margin

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
     text-align: center;
     font-family: 'Joti One', 'Open Sans', sans-serif;
     border: 6px solid rgb(69, 62, 75);
+    margin: 0;
 }
 
 h1 {
